--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node ./dist/app.js",
+        "start": "tsc && node ./dist/app.js",
         "dev": "nodemon src/app.ts",
         "build": "tsc"
     },
@@ -15,7 +15,6 @@
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
-        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.7.4",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
@@ -29,6 +28,8 @@
         "uuid": "^11.0.2"
     },
     "devDependencies": {
+        "@types/dotenv": "^6.1.1",
+        "@types/jsonwebtoken": "^9.0.7",
         "nodemon": "^3.1.7"
     }
 }
