--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,11 @@
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.21.0",
+        "express": "^4.21.1",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.9.0",
         "mongoose": "^8.7.0",
+        "socket.io": "^4.8.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
         "uuid": "^11.0.2"
@@ -30,6 +31,7 @@
     "devDependencies": {
         "@types/dotenv": "^6.1.1",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/socket.io": "^3.0.1",
         "nodemon": "^3.1.7"
     }
 }
